...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qHR-2a-E8z">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
                                        <accessibility key="accessibilityConfiguration" label="Decide"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                        <state key="normal" title="Decide" backgroundImage="button_blank">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MrX-Fm-NZa">
                                        <rect key="frame" x="0.0" y="98" width="320" height="83"/>
                                        <accessibility key="accessibilityConfiguration" label="Choose"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                        <state key="normal" title="Choose" backgroundImage="button_blank">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6IB-l3-GxU">
                                        <rect key="frame" x="0.0" y="196" width="320" height="83"/>
                                        <accessibility key="accessibilityConfiguration" label="Ask"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                        <state key="normal" title="Ask" backgroundImage="button_blank">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adu-UI-Tyy">
                                <rect key="frame" x="317" y="597" width="50" height="50"/>
                                <accessibility key="accessibilityConfiguration" hint="Change the background colors" label="Set Colors"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="K16-28-RBI"/>
...
                        <viewLayoutGuide key="safeArea" id="u24-Us-AOx"/>
                    </view>
                    <navigationItem key="navigationItem" title="Menu" id="1nq-mJ-tD6"/>
                    <connections>
                        <outlet property="askButton" destination="6IB-l3-GxU" id="0jW-TA-ua5"/>
...
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Select Color" id="s0F-bc-8BG">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="uGv-Sw-ZPf">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Choice" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="B28-1m-xvI">
                                                    <rect key="frame" x="15" y="0.0" width="305" height="44"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="upK-TA-daT">
                                <rect key="frame" x="27.5" y="273.5" width="320" height="206"/>
                                <accessibility key="accessibilityConfiguration" hint="Displays a new decision when pressed." label="Results"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="206" id="KJt-1f-g0w"/>
...
                        <viewLayoutGuide key="safeArea" id="k3t-Rw-OTO"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Choice" largeTitleDisplayMode="never" id="BCP-to-1Yf">
                        <barButtonItem key="rightBarButtonItem" title="Recent" id="mXe-NT-Xzj">
                            <connections>
                                <segue destination="m24-Wb-tmy" kind="show" identifier="RecentSegue" id="rst-lz-3vN"/>
...
                        <viewLayoutGuide key="safeArea" id="KAn-Pi-a4I"/>
                    </view>
                    <navigationItem key="navigationItem" title="Information" id="VOi-TB-aOH"/>
                    <connections>
                        <outlet property="enclosingView" destination="eN4-bF-vBV" id="z9a-bX-oMX"/>
...
